--- a/HotChat/SearchStartViewController.xib
+++ b/HotChat/SearchStartViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -12,9 +12,59 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="39a-7E-w93">
+                    <rect key="frame" x="8" y="204" width="304" height="160"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06R-iG-46i">
+                            <rect key="frame" x="0.0" y="0.0" width="304" height="64"/>
+                            <color key="backgroundColor" red="0.18823529780000001" green="0.77647060160000003" blue="0.81960785390000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="64" id="CdT-7q-snp"/>
+                            </constraints>
+                            <state key="normal" title="現在地からさがす">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="locationButtonTapped:" destination="-1" eventType="touchUpInside" id="nR5-z1-b26"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1A6-6R-Zys">
+                            <rect key="frame" x="0.0" y="96" width="304" height="64"/>
+                            <color key="backgroundColor" red="0.18823529780000001" green="0.77647060160000003" blue="0.81960785390000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="64" id="Vbe-Kv-ETd"/>
+                            </constraints>
+                            <state key="normal" title="履歴からさがす">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="historyButtonTapped:" destination="-1" eventType="touchUpInside" id="2xj-Fh-uU8"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="06R-iG-46i" secondAttribute="trailing" id="9r4-ph-rch"/>
+                        <constraint firstAttribute="bottom" secondItem="1A6-6R-Zys" secondAttribute="bottom" id="K06-eD-6ux"/>
+                        <constraint firstItem="1A6-6R-Zys" firstAttribute="leading" secondItem="39a-7E-w93" secondAttribute="leading" id="g1s-Fi-O1N"/>
+                        <constraint firstAttribute="trailing" secondItem="1A6-6R-Zys" secondAttribute="trailing" id="gvE-Zs-jIH"/>
+                        <constraint firstItem="06R-iG-46i" firstAttribute="leading" secondItem="39a-7E-w93" secondAttribute="leading" id="j2i-dc-FYh"/>
+                        <constraint firstAttribute="height" constant="160" id="m0d-39-xws"/>
+                        <constraint firstItem="06R-iG-46i" firstAttribute="top" secondItem="39a-7E-w93" secondAttribute="top" id="ybU-Kj-sQy"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="39a-7E-w93" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="2Hh-Qe-Lyr"/>
+                <constraint firstItem="39a-7E-w93" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="BwK-aR-eGz"/>
+                <constraint firstAttribute="trailing" secondItem="39a-7E-w93" secondAttribute="trailing" constant="8" id="DsA-1E-ZzV"/>
+                <constraint firstItem="39a-7E-w93" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="efV-NF-qWA"/>
+            </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
 </document>
