--- a/HotChat/ChatMeTableViewCell.xib
+++ b/HotChat/ChatMeTableViewCell.xib
@@ -16,16 +16,28 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1g-GQ-dKP">
                         <rect key="frame" x="64" y="8" width="248" height="103.5"/>
-                        <color key="backgroundColor" red="0.50196081400000003" green="0.7254902124" blue="0.27843138579999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23:59" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3Y-PM-5xh">
+                        <rect key="frame" x="14" y="99" width="42" height="12"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="42" id="dIr-Ok-9XN"/>
+                            <constraint firstAttribute="height" constant="12" id="eTB-5O-9NH"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="H1g-GQ-dKP" firstAttribute="leading" secondItem="k3Y-PM-5xh" secondAttribute="trailing" constant="8" id="H8B-5c-Bp6"/>
                     <constraint firstAttribute="trailing" secondItem="H1g-GQ-dKP" secondAttribute="trailing" constant="8" id="OHJ-D3-JDd"/>
                     <constraint firstAttribute="bottom" secondItem="H1g-GQ-dKP" secondAttribute="bottom" constant="8" id="XJO-hU-IMa"/>
                     <constraint firstItem="H1g-GQ-dKP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="64" id="k4J-Jw-PZV"/>
+                    <constraint firstItem="k3Y-PM-5xh" firstAttribute="bottom" secondItem="H1g-GQ-dKP" secondAttribute="bottom" id="kNw-7D-Jbc"/>
                     <constraint firstItem="H1g-GQ-dKP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="xtA-nh-8oY"/>
                 </constraints>
             </tableViewCellContentView>
