--- a/HotChat/ChatOtherTableViewCell.xib
+++ b/HotChat/ChatOtherTableViewCell.xib
@@ -16,7 +16,7 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qd-ga-jxp">
                         <rect key="frame" x="56" y="37" width="200" height="91"/>
-                        <color key="backgroundColor" red="0.96862745289999996" green="0.69411766529999996" blue="0.66274511810000003" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -37,17 +37,40 @@
                             <constraint firstAttribute="height" constant="40" id="elb-Ws-edP"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23:59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7A-dl-Eby">
+                        <rect key="frame" x="264" y="116" width="42" height="12"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="42" id="edK-iG-Xrh"/>
+                            <constraint firstAttribute="height" constant="12" id="hRA-0O-boN"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5iW-04-X4u">
+                        <rect key="frame" x="264" y="37" width="46" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="5fO-J0-nqd"/>
+                            <constraint firstAttribute="width" constant="46" id="CFD-Ts-L8e"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="⭐︎"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="wA5-Np-pU6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="9MK-Qz-uKn"/>
                     <constraint firstItem="ZV6-f9-CEX" firstAttribute="top" secondItem="wA5-Np-pU6" secondAttribute="top" id="EGG-Ro-dy2"/>
                     <constraint firstAttribute="trailing" secondItem="6Qd-ga-jxp" secondAttribute="trailing" constant="64" id="I4R-Ao-dsV"/>
                     <constraint firstItem="wA5-Np-pU6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="K3F-Cs-rgM"/>
+                    <constraint firstItem="O7A-dl-Eby" firstAttribute="leading" secondItem="6Qd-ga-jxp" secondAttribute="trailing" constant="8" id="UVI-aO-fVa"/>
                     <constraint firstAttribute="trailing" secondItem="ZV6-f9-CEX" secondAttribute="trailing" constant="8" id="VSX-8N-DAW"/>
                     <constraint firstAttribute="bottom" secondItem="6Qd-ga-jxp" secondAttribute="bottom" constant="8" id="aTg-JI-cbo"/>
                     <constraint firstItem="6Qd-ga-jxp" firstAttribute="top" secondItem="ZV6-f9-CEX" secondAttribute="bottom" constant="8" id="ajZ-cj-ltP"/>
                     <constraint firstItem="6Qd-ga-jxp" firstAttribute="leading" secondItem="wA5-Np-pU6" secondAttribute="trailing" constant="8" id="hEP-YL-KgV"/>
+                    <constraint firstItem="O7A-dl-Eby" firstAttribute="bottom" secondItem="6Qd-ga-jxp" secondAttribute="bottom" id="nDz-Q5-rcQ"/>
                     <constraint firstItem="ZV6-f9-CEX" firstAttribute="leading" secondItem="wA5-Np-pU6" secondAttribute="trailing" constant="8" id="ojt-4G-ezi"/>
+                    <constraint firstItem="5iW-04-X4u" firstAttribute="leading" secondItem="6Qd-ga-jxp" secondAttribute="trailing" constant="8" id="xAx-nV-K3d"/>
+                    <constraint firstItem="5iW-04-X4u" firstAttribute="top" secondItem="6Qd-ga-jxp" secondAttribute="top" id="xfb-vj-PTb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
