--- a/HotChat/views/InfiniteLoadingCell.xib
+++ b/HotChat/views/InfiniteLoadingCell.xib
@@ -14,12 +14,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="2Ur-Eg-ucd">
-                        <rect key="frame" x="144" y="6" width="32" height="32"/>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="2Ur-Eg-ucd">
+                        <rect key="frame" x="144.5" y="5.5" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="32" id="QBI-3c-9sw"/>
                             <constraint firstAttribute="height" constant="32" id="Y27-Dz-Dg5"/>
                         </constraints>
+                        <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </activityIndicatorView>
                 </subviews>
                 <constraints>
