--- a/HotChat/viewcontrollers/ChatListViewController.xib
+++ b/HotChat/viewcontrollers/ChatListViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,7 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatListViewController" customModule="HotChat" customModuleProvider="target">
             <connections>
+                <outlet property="chatInputView" destination="9mt-Ak-LY6" id="Rr1-ms-4LS"/>
+                <outlet property="chatInputViewBottomConstraint" destination="e2p-8w-cQd" id="09z-Tn-WQN"/>
                 <outlet property="tableView" destination="Ihh-84-9d8" id="FbW-Oo-BkJ"/>
+                <outlet property="tableViewBottomConstraint" destination="xBF-Jo-e7X" id="Dag-m7-4Kp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,16 +20,51 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ihh-84-9d8">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="520"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mt-Ak-LY6">
+                    <rect key="frame" x="0.0" y="520" width="320" height="48"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kn2-Tp-gYh">
+                            <rect key="frame" x="266" y="9" width="46" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="46" id="IOc-zS-vGa"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <state key="normal" title="送信">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5p-8J-1zU">
+                            <rect key="frame" x="16" y="9" width="242" height="30"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="W5p-8J-1zU" firstAttribute="top" secondItem="9mt-Ak-LY6" secondAttribute="top" constant="9" id="GXj-b1-sGI"/>
+                        <constraint firstAttribute="bottom" secondItem="W5p-8J-1zU" secondAttribute="bottom" constant="9" id="NLC-Yc-qrM"/>
+                        <constraint firstItem="kn2-Tp-gYh" firstAttribute="top" secondItem="9mt-Ak-LY6" secondAttribute="top" constant="9" id="SDb-zF-aQV"/>
+                        <constraint firstAttribute="bottom" secondItem="kn2-Tp-gYh" secondAttribute="bottom" constant="9" id="XUw-PM-bdw"/>
+                        <constraint firstAttribute="height" constant="48" id="ZSw-q8-OMJ"/>
+                        <constraint firstItem="W5p-8J-1zU" firstAttribute="leading" secondItem="9mt-Ak-LY6" secondAttribute="leading" constant="16" id="fdY-XT-uwy"/>
+                        <constraint firstAttribute="trailing" secondItem="kn2-Tp-gYh" secondAttribute="trailing" constant="8" id="noc-Pv-UUS"/>
+                        <constraint firstItem="kn2-Tp-gYh" firstAttribute="leading" secondItem="W5p-8J-1zU" secondAttribute="trailing" constant="8" id="rik-LA-awx"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Ihh-84-9d8" secondAttribute="trailing" id="8mE-Ak-BgH"/>
                 <constraint firstItem="Ihh-84-9d8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Gms-bh-zvl"/>
                 <constraint firstItem="Ihh-84-9d8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ioy-ah-xnJ"/>
-                <constraint firstAttribute="bottom" secondItem="Ihh-84-9d8" secondAttribute="bottom" id="xBF-Jo-e7X"/>
+                <constraint firstAttribute="trailing" secondItem="9mt-Ak-LY6" secondAttribute="trailing" id="SbC-Jm-QLX"/>
+                <constraint firstAttribute="bottom" secondItem="9mt-Ak-LY6" secondAttribute="bottom" id="e2p-8w-cQd"/>
+                <constraint firstAttribute="bottom" secondItem="Ihh-84-9d8" secondAttribute="bottom" constant="48" id="xBF-Jo-e7X"/>
+                <constraint firstItem="9mt-Ak-LY6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="y1H-eP-T85"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
