--- a/HotChat/viewcontrollers/ChatListViewController.xib
+++ b/HotChat/viewcontrollers/ChatListViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,8 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatListViewController" customModule="HotChat" customModuleProvider="target">
             <connections>
+                <outlet property="chatInputTextField" destination="W5p-8J-1zU" id="w7i-6S-p6F"/>
                 <outlet property="chatInputView" destination="9mt-Ak-LY6" id="Rr1-ms-4LS"/>
                 <outlet property="chatInputViewBottomConstraint" destination="e2p-8w-cQd" id="09z-Tn-WQN"/>
+                <outlet property="fullSizeKeyboardHideButton" destination="lxK-sI-ZiM" id="0Mj-jO-oNJ"/>
                 <outlet property="tableView" destination="Ihh-84-9d8" id="FbW-Oo-BkJ"/>
                 <outlet property="tableViewBottomConstraint" destination="xBF-Jo-e7X" id="Dag-m7-4Kp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -23,6 +25,12 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="520"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxK-sI-ZiM">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <connections>
+                        <action selector="fullSizeKeyboardHideButtonTapped:" destination="-1" eventType="touchUpInside" id="Q7M-rJ-VqF"/>
+                    </connections>
+                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mt-Ak-LY6">
                     <rect key="frame" x="0.0" y="520" width="320" height="48"/>
                     <subviews>
@@ -31,14 +39,15 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="46" id="IOc-zS-vGa"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                             <state key="normal" title="送信">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5p-8J-1zU">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="メッセージを入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5p-8J-1zU">
                             <rect key="frame" x="16" y="9" width="242" height="30"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -58,15 +67,25 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="lxK-sI-ZiM" secondAttribute="bottom" id="2Uz-4e-4s2"/>
                 <constraint firstAttribute="trailing" secondItem="Ihh-84-9d8" secondAttribute="trailing" id="8mE-Ak-BgH"/>
                 <constraint firstItem="Ihh-84-9d8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Gms-bh-zvl"/>
                 <constraint firstItem="Ihh-84-9d8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ioy-ah-xnJ"/>
                 <constraint firstAttribute="trailing" secondItem="9mt-Ak-LY6" secondAttribute="trailing" id="SbC-Jm-QLX"/>
+                <constraint firstAttribute="trailing" secondItem="lxK-sI-ZiM" secondAttribute="trailing" id="VKB-oO-eIq"/>
+                <constraint firstItem="lxK-sI-ZiM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aXS-Ou-iFf"/>
+                <constraint firstItem="9mt-Ak-LY6" firstAttribute="top" secondItem="Ihh-84-9d8" secondAttribute="bottom" id="dFB-xX-WqZ"/>
                 <constraint firstAttribute="bottom" secondItem="9mt-Ak-LY6" secondAttribute="bottom" id="e2p-8w-cQd"/>
+                <constraint firstItem="lxK-sI-ZiM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jxZ-av-TPg"/>
                 <constraint firstAttribute="bottom" secondItem="Ihh-84-9d8" secondAttribute="bottom" constant="48" id="xBF-Jo-e7X"/>
                 <constraint firstItem="9mt-Ak-LY6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="y1H-eP-T85"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="xBF-Jo-e7X"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
