--- a/HotChat/views/ChatMeTableViewCell.xib
+++ b/HotChat/views/ChatMeTableViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,15 +15,27 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1g-GQ-dKP">
-                        <rect key="frame" x="64" y="8" width="248" height="103.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56W-Ze-hTN">
+                        <rect key="frame" x="64" y="8" width="248" height="104"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1g-GQ-dKP">
+                                <rect key="frame" x="8" y="8" width="232" height="88"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.7254902124" blue="0.27843138579999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="H1g-GQ-dKP" firstAttribute="top" secondItem="56W-Ze-hTN" secondAttribute="top" constant="8" id="22S-lj-dFQ"/>
+                            <constraint firstAttribute="trailing" secondItem="H1g-GQ-dKP" secondAttribute="trailing" constant="8" id="Gne-nS-6d6"/>
+                            <constraint firstAttribute="bottom" secondItem="H1g-GQ-dKP" secondAttribute="bottom" constant="8" id="jnM-rw-5lb"/>
+                            <constraint firstItem="H1g-GQ-dKP" firstAttribute="leading" secondItem="56W-Ze-hTN" secondAttribute="leading" constant="8" id="mmG-Ek-9x0"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23:59" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3Y-PM-5xh">
-                        <rect key="frame" x="14" y="99" width="42" height="12"/>
+                        <rect key="frame" x="14" y="100" width="42" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="42" id="dIr-Ok-9XN"/>
                             <constraint firstAttribute="height" constant="12" id="eTB-5O-9NH"/>
@@ -33,15 +46,16 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="H1g-GQ-dKP" firstAttribute="leading" secondItem="k3Y-PM-5xh" secondAttribute="trailing" constant="8" id="H8B-5c-Bp6"/>
-                    <constraint firstAttribute="trailing" secondItem="H1g-GQ-dKP" secondAttribute="trailing" constant="8" id="OHJ-D3-JDd"/>
-                    <constraint firstAttribute="bottom" secondItem="H1g-GQ-dKP" secondAttribute="bottom" constant="8" id="XJO-hU-IMa"/>
-                    <constraint firstItem="H1g-GQ-dKP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="64" id="k4J-Jw-PZV"/>
-                    <constraint firstItem="k3Y-PM-5xh" firstAttribute="bottom" secondItem="H1g-GQ-dKP" secondAttribute="bottom" id="kNw-7D-Jbc"/>
-                    <constraint firstItem="H1g-GQ-dKP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="xtA-nh-8oY"/>
+                    <constraint firstItem="56W-Ze-hTN" firstAttribute="leading" secondItem="k3Y-PM-5xh" secondAttribute="trailing" constant="8" id="4de-Yu-rdv"/>
+                    <constraint firstItem="k3Y-PM-5xh" firstAttribute="bottom" secondItem="56W-Ze-hTN" secondAttribute="bottom" id="Ab0-g2-zcE"/>
+                    <constraint firstItem="56W-Ze-hTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="CHZ-Ah-byV"/>
+                    <constraint firstAttribute="bottom" secondItem="56W-Ze-hTN" secondAttribute="bottom" constant="8" id="F4f-ZB-hbb"/>
+                    <constraint firstAttribute="trailing" secondItem="56W-Ze-hTN" secondAttribute="trailing" constant="8" id="gZW-bJ-XlL"/>
+                    <constraint firstItem="56W-Ze-hTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="56" id="s01-Qc-Kw2"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bodyContainerView" destination="56W-Ze-hTN" id="bLJ-v9-EGs"/>
                 <outlet property="bodyLabel" destination="H1g-GQ-dKP" id="9o5-T5-L1s"/>
             </connections>
             <point key="canvasLocation" x="356" y="331"/>
